fix padding on seeds without avatars on mobile

--- a/src/css/profile/profile-only.less
+++ b/src/css/profile/profile-only.less
@@ -156,3 +156,11 @@
     .post-without-avatar;
   }
 }
+
+@media (max-width: @screen-xs-max) {
+  .profile-seeds {
+    .tab-content {
+      padding: 0;
+    }
+  }
+}
